# hitarget-api

./: .flake8  .gitignore  README.md  pyproject.toml  start.sh  test.sh
hitarget/: main.py
hitarget/api/api_v1/: routers.py
hitarget/api/api_v1/endpoints/: authentication.py  health.py  routine.py  user.py  utils.py
hitarget/business/: routine.py  user.py
hitarget/core/: config.py  errors.py  events.py  mongodb.py  security.py
hitarget/models/: helper.py  routine.py  user.py
hitarget/resources/: strings.py
hitarget/services/: authentication.py  jwt.py
hitarget/tests/: conftest.py
hitarget/tests/api/api_v1/: test_health.py  test_user.py  test_utils.py
tests/: conftest.py
tests/api/api_v1/: test_health.py  test_routine.py  test_user.py
tests/data_constraints/: test_business_user.py  test_routine.py
tests/fixtures/: routine.py
tests/models/: test_routine.py
tests/services/: test_datetime.py  test_jwt.py
