[tool.poetry]
name = "hitarget-api"
version = "0.1.0"
description = "hitarget API"
authors = ["tuanh <hoangtua.vn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.63.0"
uvicorn = "^0.13.2"
motor = "^2.3.0"
bcrypt = "^3.2.0"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
