[tool.poetry]
name = "hitarget-api"
version = "0.1.0"
description = "hitarget API"
authors = ["tuanh <hoangtua.vn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.63.0"
uvicorn = "^0.13.2"
motor = "^2.3.0"
bcrypt = "^3.2.0"
passlib = "^1.7.4"
PyJWT = "^2.0.1"
pytest-cov = "^2.11.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
requests = "^2.25.1"
pytest-asyncio = "^0.14.0"
asgi-lifespan = "^1.0.1"
httpx = "^0.16.1"


[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "error"
addopts = '''
  --strict-markers
  --tb=short
  --cov=hitarget
  --cov=tests
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml
  --no-cov-on-fail
  --cov-fail-under=85
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
